name:                real-day-end
version:             0.0.1
synopsis:            Tiny library to calculate date considering when your day realy ends
homepage:            https://github.com/s9gf4ult/real-day-end
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Data.Time.RealDayEnd
  build-depends:       base >= 4.6 && < 5
                     , time
  default-language:    Haskell2010

test-suite real-day-end-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , quickcheck-instances
                     , real-day-end
                     , tasty
                     , tasty-quickcheck
                     , time
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/s9gf4ult/real-day-end
